Fixed scrollbar-appearing bug

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 body {
 	padding-top: 40px;
-	padding-bottom: 90px;
 	background: red;
 }
 
@@ -36,6 +35,11 @@ footer {
 */
 
 #earth-svg {
+	width: 100%;
+	height: 100%;
+}
+
+#temperature-svg {
 	width: 100%;
 	height: 100%;
 }
